--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -8,8 +8,14 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-.DS_Store
+*.log*
+.nuxt
+.nitro
+.cache
+.output
+.env
 dist
+.DS_Store
 dist-ssr
 coverage
 *.local
