--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,6 @@
     "nuxt": "^3.5.0"
   },
   "dependencies": {
-    "@nuxtjs/dotenv": "^1.4.1",
-    "bootstrap": "^5.2.3",
-    "jquery": "^3.7.0",
-    "popper.js": "^1.16.1"
+    "@nuxtjs/dotenv": "^1.4.1"
   }
 }
